--- a/config.json
+++ b/config.json
@@ -1,9 +1,9 @@
 {
-    "ownerBot": "62812xxxxxxx@c.us", 
-    "prefix": "$",
+    "ownerBot": "6285796582392@c.us", 
+    "prefix": "!",
     "uaOverride": "WhatsApp/2.2037.6 Mozilla/5.0 (Macintosh; Intel Mac OS X 10_15_6) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/85.0.4183.83 Safari/537.36",
-    "token": "api-key",
-    "nao": "api-key",
-    "vhtear": "api-key",
+    "token": "Nkwp9oR7Eg9yyKbejBpm",
+    "nao": "Nkwp9oR7Eg9yyKbejBpm",
+    "vhtear": "K2021Chikanot",
     "melodic": "administrator"
 }
